<resources>
    <string name="app_name">Transcribe</string>
    <string name="home_button">Home</string>
    <string name="upload_button">Upload</string>
    <string name="favorites_button">Favorites</string>
    <string name="play_button">Play</string>

    <string name="menu_name">Recents</string>
    <string name="logout_menu">Logout</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>

    <string name="title_error_msg">Title cannot be blank</string>
    <string name="author_error_msg">Author cannot be blank</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="email">Email</string>
    <string name="email_error_message">Please insert a valid
email.</string>
    <string name="password">Password</string>
    <string name="password_error_message">Please insert a valid
password</string>
    <string name="verify_email">Verify email</string>
    <string name="forgot_password">Forgot password</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="back_button">Back</string>
    <string name="submit_button">Submit</string>
    <string name="first_name_hint">First Name</string>
    <string name="first_name_error_message">Firstname is blank</string>
    <string name="surname_hint">Surname</string>
    <string name="surname_error_message">Surname is blank</string>

</resources>